<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default_double"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_event_title"
            style="@style/AppEventConfigField"
            android:hint="@string/bottom_sheet_new_event_hint_title" />

        <EditText
            android:id="@+id/new_event_subtitle"
            style="@style/AppEventConfigField"
            android:layout_marginTop="@dimen/margin_default"
            android:hint="@string/bottom_sheet_new_event_hint_subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default">

            <TextView
                android:id="@+id/new_event_date"
                style="@style/AppEventDateField"
                tools:text="2019-09-10" />

            <TextView
                android:id="@+id/new_event_time"
                style="@style/AppEventDateField"
                android:layout_marginStart="@dimen/margin_default"
                tools:text="21:00" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:padding="@dimen/padding_default">

        <Button
            android:id="@+id/add_new_event_close"
            style="@style/AppEventConfigButton"
            android:layout_toStartOf="@id/add_new_event"
            android:text="@string/common_close" />

        <Button
            android:id="@+id/add_new_event"
            style="@style/AppEventConfigButton"
            android:layout_alignParentEnd="true"
            android:text="@string/bottom_sheet_new_event_add" />

    </RelativeLayout>

</LinearLayout>