<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:arv="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.smlnskgmail.jaman.adaptiverecyclerview.AdaptiveRecyclerView
        android:id="@+id/events_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.smlnskgmail.jaman.adaptiverecyclerview.AdaptiveMessageView
        android:id="@+id/events_list_message_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        arv:message_image_tint="@color/colorEmptyMessageText"
        arv:message_image="@drawable/ic_event_note"
        arv:message_text_color="@color/colorEmptyMessageText" />

    <jahirfiquitiva.libs.fabsmenu.FABsMenuLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        fab:fabs_menu_overlayColor="@color/colorBackgroundFab"
        fab:fabs_menu_clickableOverlay="true">

        <jahirfiquitiva.libs.fabsmenu.FABsMenu
            android:id="@+id/main_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            fab:fab_moreButtonBackgroundColor="@color/colorAccent"
            fab:fab_moreButtonRippleColor="@color/colorMainFabMenuPressed"
            fab:fab_moreButtonPlusIcon="@drawable/ic_add">

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/create_event"
                style="@style/AppFAB"
                fab:fab_title="@string/fab_title_create_event"
                fab:backgroundTint="@color/colorBackgroundFabCreateEvent"
                fab:srcCompat="@drawable/ic_event_note"
                fab:fabSize="mini" />

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/create_local_backup"
                style="@style/AppFAB"
                fab:fab_title="@string/fab_title_create_local_backup"
                fab:backgroundTint="@color/colorBackgroundFabCreateBackup"
                fab:srcCompat="@drawable/ic_save"
                fab:fabSize="mini" />

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/restore_local_backup"
                style="@style/AppFAB"
                fab:fab_title="@string/fab_title_restore_local_backup"
                fab:backgroundTint="@color/colorBackgroundFabRestoreBackup"
                fab:srcCompat="@drawable/ic_restore"
                fab:fabSize="mini" />

        </jahirfiquitiva.libs.fabsmenu.FABsMenu>

    </jahirfiquitiva.libs.fabsmenu.FABsMenuLayout>

</FrameLayout>